--- a/New Text Document.html
+++ b/New Text Document.html
@@ -8,7 +8,7 @@
     
     <h2>this is heading 2</h2>
     <p>this is some <br/> other text</p><hr>
-    
+    <p>my paragarap</p>
     <pre>
     this paragraph
     contains        a lot of spaces
